tests/diagnostics/try_on_non_option.kal
# `?` only applies to Option or Result.
fn f() -> i64 = { let x: i64 = 5; x? };
